--- a/dots/.config/tmux/tmux.conf
+++ b/dots/.config/tmux/tmux.conf
@@ -58,7 +58,7 @@ run '~/.tmux/plugins/tpm/tpm'
 # set vi-mode
 set-window-option -g mode-keys vi
 
-bind '|' split-window -h -c "#{pane_current_path}"
+bind '\' split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 bind -T copy-mode-vi v send-keys -X begin-selection
