new nvim, setup miniconda, remap caps_lock -> cntrl

--- a/dots/.config/polybar/config.ini
+++ b/dots/.config/polybar/config.ini
@@ -10,7 +10,7 @@ include-file = $HOME/.config/polybar/modules/misc.ini
 
 
 [bar/primary-top]
-monitor = DP-4
+monitor = HDMI-1
 monitor-exact = true
 overide-redirect = true
 
