--- a/dots/.config/i3/config
+++ b/dots/.config/i3/config
@@ -17,6 +17,7 @@ exec_always --no-startup-id chmod +x "/home/$USER/.config/polybar/scripts/*"
 exec_always --no-startup-id picom --config /home/$USER/.config/picom/picom.conf
 exec_always --no-startup-id /home/$USER/.config/polybar/scripts/polybarstart.sh
 exec_always --no-startup-id dwall -s firewatch
+exec_always --no-startup-id /home/$USER/.xinitrc
 
 exec --no-startup-id xrdb -merge ~/.Xresources
 exec --no-startup-id nm-applet
