--- a/dots/.config/i3/config
+++ b/dots/.config/i3/config
@@ -1,7 +1,8 @@
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
-
+#
+exec --no-startup-id "setxkbmap -option ctrl:nocaps"
 set $mod Mod1
 
 for_window [class=".*"] border pixel 0
@@ -16,6 +17,7 @@ exec_always --no-startup-id chmod +x "/home/$USER/.config/i3/scripts/*"
 exec_always --no-startup-id chmod +x "/home/$USER/.config/polybar/scripts/*"
 exec_always --no-startup-id picom --config /home/$USER/.config/picom/picom.conf
 exec_always --no-startup-id /home/$USER/.config/polybar/scripts/polybarstart.sh
+exec_always --no-startup-id nitrogen --restore
 exec_always --no-startup-id dwall -s firewatch
 exec_always --no-startup-id /home/$USER/.xinitrc
 
