--- a/dots/.config/i3/config
+++ b/dots/.config/i3/config
@@ -34,6 +34,7 @@ floating_modifier $mod
 bindsym $mod+q kill
 
 bindsym $mod+Shift+r restart
+bindsym $mod+Shift+e i3-msg exit, mode "default"
 
 # move focused window
 bindsym $mod+Shift+h move left
