--- a/dots/.config/nitrogen/nitrogen.cfg
+++ b/dots/.config/nitrogen/nitrogen.cfg
@@ -1,6 +1,6 @@
 [geometry]
-posx=2344
-posy=82
+posx=704
+posy=301
 sizex=510
 sizey=500
 
@@ -9,4 +9,4 @@ view=icon
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=/home/flynn/wallpapers;
+dirs=/home/flynn/.wallpapers;
