--- a/dots/.config/polybar/config.ini
+++ b/dots/.config/polybar/config.ini
@@ -9,7 +9,7 @@ include-file = $HOME/.config/polybar/modules/util.ini
 include-file = $HOME/.config/polybar/modules/misc.ini
 
 [bar/primary-top]
-monitor = HDMI-1
+monitor = 
 monitor-exact = true
 overide-redirect = true
 
