--- a/dots/.ideavimrc
+++ b/dots/.ideavimrc
@@ -1,9 +1,34 @@
+set number                        " line numbers
+
+set hlsearch                      " highlight search occurrences
+set ignorecase                    " ignore case in search patterns
+set smartcase                     " no ignore case when pattern is uppercase
+set incsearch                     " show search results while typing
+set wrapscan                      " searches wrap around the end of the file
+
+set gdefault                      " substitute all occurrences in line per default
+set history=10000                 " keep x lines of command line history
+set scrolloff=5 sidescrolloff=10  " keep some lines before and after the cursor visible
+set clipboard=unnamedplus,unnamed,ideaput " integrate with system clipboard
+
+" https://github.com/JetBrains/ideavim/wiki/%22set%22-commands
+set multiple-cursors
+set commentary
+set surround                      " emulate vim-surround plugin
+set ideajoin
+set ideastatusicon=disabled
+
+" set <leader> to <space>
+let mapleader = " "
+
 imap kj <ESC>
 
 map <c-s-=> <Action>(ZoomInIdeAction)
 map <c-s--> <Action>(ZoomOutIdeAction)
 
 Plug 'preservim/nerdtree'
+Plug 't-pope/surround'
+Plug 't-pope/commentary'
 
 """" Window / Split Management ---------------
 noremap <C-L> <C-W><C-L>
