--- a/dots/.config/tmux/tmux.conf
+++ b/dots/.config/tmux/tmux.conf
@@ -4,8 +4,9 @@ set -g mouse on
 set-option -sg escape-time 10
 
 unbind C-b
-set -g prefix C-space
-bind C-a send-prefix
+set-option -g prefix C-a
+bind-key C-a send-prefix 
+
 unbind x
 bind x kill-pane
 
