rm firefox binaries

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,6 +22,8 @@
       path: dots/.ideavimrc
     ~/.zshrc:
       path: dots/.zshrc
+    ~/.xinitrc:
+      path: dots/.xinitrc
     ~/.wallpapers:
       path: dots/.wallpapers
     ~/.icons:
