move env outsize of zshrc

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,6 +22,8 @@
       path: dots/.ideavimrc
     ~/.zshrc:
       path: dots/.zshrc
+    ~/.zshenv:
+      path: dots/.zshenv
     ~/.xinitrc:
       path: dots/.xinitrc
     ~/.wallpapers:
