--- a/dots/.config/btop/btop.conf
+++ b/dots/.config/btop/btop.conf
@@ -2,7 +2,7 @@
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "/home/flynn/.config/btop/themes/catppuccin_mocha.theme"
+color_theme = "/usr/share/btop/themes/monokai.theme"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
 theme_background = True
@@ -47,10 +47,10 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc", separate values with whitespace.
-shown_boxes = "proc net mem cpu"
+shown_boxes = "proc cpu mem net"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
-update_ms = 2000
+update_ms = 1900
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu responsive" updates top process directly.
@@ -69,7 +69,7 @@ proc_colors = True
 proc_gradient = True
 
 #* If process cpu usage should be of the core it's running on or usage of the total available cpu power.
-proc_per_core = True
+proc_per_core = False
 
 #* Show process memory as bytes instead of percent.
 proc_mem_bytes = True
