--- a/dots/.config/btop/btop.conf
+++ b/dots/.config/btop/btop.conf
@@ -50,11 +50,11 @@ graph_symbol_proc = "default"
 shown_boxes = "proc cpu mem net"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
-update_ms = 1900
+update_ms = 100
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu responsive" updates top process directly.
-proc_sorting = "threads"
+proc_sorting = "name"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
