--- a/dots/.config/btop/btop.conf
+++ b/dots/.config/btop/btop.conf
@@ -50,11 +50,11 @@ graph_symbol_proc = "default"
 shown_boxes = "proc cpu mem net"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
-update_ms = 100
+update_ms = 200
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu responsive" updates top process directly.
-proc_sorting = "name"
+proc_sorting = "memory"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
@@ -181,7 +181,7 @@ net_download = 100
 net_upload = 100
 
 #* Use network graphs auto rescaling mode, ignores any values set above and rescales down to 10 Kibibytes at the lowest.
-net_auto = True
+net_auto = False
 
 #* Sync the auto scaling for download and upload to whichever currently has the highest scale.
 net_sync = True
