--- a/dots/.config/btop/btop.conf
+++ b/dots/.config/btop/btop.conf
@@ -50,7 +50,7 @@ graph_symbol_proc = "default"
 shown_boxes = "proc cpu mem net"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
-update_ms = 200
+update_ms = 100
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu responsive" updates top process directly.
@@ -86,7 +86,7 @@ cpu_graph_upper = "total"
 
 #* Sets the CPU stat shown in lower half of the CPU graph, "total" is always available.
 #* Select from a list of detected attributes from the options menu.
-cpu_graph_lower = "total"
+cpu_graph_lower = "user"
 
 #* Toggles if the lower CPU graph should be inverted.
 cpu_invert_lower = True
@@ -145,10 +145,10 @@ mem_graphs = True
 mem_below_net = False
 
 #* If swap memory should be shown in memory box.
-show_swap = True
+show_swap = False
 
 #* Show swap as a disk, ignores show_swap value above, inserts itself after first disk.
-swap_disk = True
+swap_disk = False
 
 #* If mem box should be split to also show disks info.
 show_disks = False
@@ -163,7 +163,7 @@ use_fstab = True
 disk_free_priv = False
 
 #* Toggles if io activity % (disk busy time) should be shown in regular disk usage view.
-show_io_stat = True
+show_io_stat = False
 
 #* Toggles io mode for disks, showing big graphs for disk read/write speeds.
 io_mode = False
