--- a/dots/.config/btop/btop.conf
+++ b/dots/.config/btop/btop.conf
@@ -47,10 +47,10 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc", separate values with whitespace.
-shown_boxes = "cpu proc"
+shown_boxes = "cpu mem net proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
-update_ms = 1100
+update_ms = 300
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu responsive",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu responsive" updates top process directly.
@@ -95,7 +95,7 @@ cpu_invert_lower = True
 cpu_single_graph = False
 
 #* Show cpu box at bottom of screen instead of top.
-cpu_bottom = True
+cpu_bottom = False
 
 #* Shows the system uptime in the CPU box.
 show_uptime = True
