--- a/dots/.config/tmux/tmux.conf
+++ b/dots/.config/tmux/tmux.conf
@@ -3,9 +3,9 @@ set -g mouse on
 
 set-option -sg escape-time 10
 
-unbind C-b
-set-option -g prefix C-Space
-bind-key C-Space send-prefix 
+unbind C-Space
+set-option -g prefix C-a
+bind-key C-Space send-prefix
 
 unbind x
 bind x kill-pane
