--- a/dots/.config/tmux/tmux.conf
+++ b/dots/.config/tmux/tmux.conf
@@ -3,8 +3,8 @@ set -g mouse on
 
 set-option -sg escape-time 10
 
-unbind C-Space
-set-option -g prefix C-a
+unbind C-b
+set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
 unbind x
