--- a/dots/.config/tmux/tmux.conf
+++ b/dots/.config/tmux/tmux.conf
@@ -70,7 +70,11 @@ bind -n C-Down resize-pane -D 2
 bind -n C-Up resize-pane -U 2
 bind -n C-Right resize-pane -R 2
 
+bind-key -T prefix g split-window \
+  "$SHELL --login -i -c 'navi --print | head -n 1 | tmux load-buffer -b tmp - ; tmux paste-buffer -p -t {last} -b tmp -d'"
+
 # Install plugin manager and plugins
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
 
