--- a/.gitignore
+++ b/.gitignore
@@ -1,162 +1,56 @@
-# Could just force-add these files and leave this as '*', but this way I have a
-# nice explicit list for documentation's sake.
+### macOS ###
+*.DS_Store
+.AppleDouble
+.LSOverride
+# Icon must end with two \r
+Icon
+# Thumbnails
+._*
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
-# Ignore everything by default.
-*
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+# Dump file
+*.stackdump
+# Folder config file
+[Dd]esktop.ini
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+# Windows shortcuts
+*.lnk
 
-# Bash stuff (profile just sources bashrc, since it's the only thing sourced
-# when a shell is a login shell).
-!.bash*
-.*.swp
-.bash_history
-.bash_local
-.bash_logout
-!.profile
-
-# Zsh
-!.zshrc
-!.zsh
-!.zsh/*
-!.zsh/contrib
-!.zsh/contrib/*
-# Do ignore the data directory (my construct, it's where completion cache,
-# history etc live)
-.zsh/data
-.zsh/data/*
-# Do ignore local/sensitive settings
-.zsh/*local
-# Swapfiles (sigh)
-.zsh/*.swp
-
-# Git aliases, identification info
-!.gitconfig
-# The gitignore of this repository itself (!)
-!.gitignore
-# My global Git excludes file (acts as a global .gitignore)
-!.gitexcludes
-
-# Mercurial config (yup, stored in a Git repository. Take that, hg!)
-!.hgrc
-
-# IPython config (need directory here so gitignore works correctly.
-# This won't actually pull in the other contetns of the dir, though.
-# Which is good as all I care about is the...
-!.ipython
-# ...default profile's...
-!.ipython/profile_default
-# ...main config file
-!.ipython/profile_default/ipython_config.py
-
-# Virtualenvwrapper hooks
-!.virtualenvs
-!.virtualenvs/postmkvirtualenv
-
-# IRb config
-!.irbrc
-# RVM config
-!.rvmrc
-
-# Vim plugins, ftplugins, syntax etc etc
-!.vim
-!.vim/*
-!.vim/*/*
-!.vim/*/*/*
-!.vim/*/*/*/*
-!.vim/*/*/*/*/*
-!.vim/*/*/*/*/*/*
-# Do ignore netrw history
-.vim/.netrwhist
-# Do ignore vim-plug stuff, sigh
-.vim/plugged
-# Vim settings
-!.vimrc
-# Ignore swapfiles
-.vim/.*.swp
-.vim/*/.*.swp
-.vim/*/*/.*.swp
-.vim/*/*/*/.*.swp
-
-# Local copies of tools/scripts
-!bin
-!bin/*
-bin/.*.swp
-# Concourse CLI; changes depending on target version
-bin/fly
-
-# Config for local daemons (e.g. squid)
-!etc
-!etc/*
-etc/clusto*.conf
-
-# Screen, tmux
-!.screenrc
-!.tmux.conf
-!.tmux
-!.tmux/*.yml
-
-# Gem config
-!.gemrc
-
-# Mutt
-!.muttrc
-!.mutt
-!.mutt/*
-
-# RTorrent
-!.rtorrent.rc
-
-# Ack
-!.ackrc
-
-# Teamocil
-!.teamocil
-!.teamocil/*
-
-# Synergy
-!.synergy.conf
-
-# Leiningen (Clojure)
-!.lein
-!.lein/profiles.clj
-
-# Hammerspoon (Lua-based OS X automation tool)
-!.hammerspoon
-!.hammerspoon/*
-.hammerspoon/.*.swp
-
-# Linux workstation stuff
-!.config
-!.config/bat
-!.config/bat/*
-!.config/bat/themes
-!.config/bat/themes/*
-!.config/xfce4
-!.config/xfce4/terminal
-!.config/xfce4/terminal/terminalrc
-!.config/systemd/
-!.config/systemd/user
-!.config/systemd/user/*
-!.config/systemd/user/*/*
-# Keep ignoring this, it comes from the OS.
-.config/systemd/user/gpg-agent.service
-# And don't see swaps as usual (sigh)
-.config/systemd/user/.*.swp
-
-# Random arbitrary not-really-a-config file,
-# for use with hexdump
-!.config/hexdump.format
-
-# Invoke customization (eg for nixos run.shell loc)
-!.invoke.yml
-
-# GPG settings (does NOT include keychain etc!)
-!.gnupg
-!.gnupg/*.conf
-
-# Rust!
-!.cargo
-!.cargo/config.toml
-
-# Lazygit
-!.config/lazygit/
-!.config/lazygit/config.yml
+### Linux ###
+*~
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+# KDE directory preferences
+.directory
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+$ Neovim
+nvim/.config/nvim/plugin/packer_compiled.lua
+*.log
