--- a/dots/.config/tmux/tmux.conf
+++ b/dots/.config/tmux/tmux.conf
@@ -41,9 +41,14 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/nvim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-# set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'kitty,fullscreen'
+set -g status-right 'Continuum status: #{continuum_status}'
+
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @catppuccin_flavour 'mocha'
 
