--- a/dots/.config/flameshot/flameshot.ini
+++ b/dots/.config/flameshot/flameshot.ini
@@ -1,4 +1,11 @@
 [General]
+antialiasingPinZoom=false
 contrastOpacity=255
-drawColor=#00ffff
-savePath=/home/flynn/Pictures
+copyAndCloseAfterUpload=false
+copyPathAfterSave=true
+drawColor=#000000
+filenamePattern=%b_%d_%Y_%H%M%S
+saveAsFileExtension=png
+savePath=/home/flynn/remmina_share
+showHelp=false
+showStartupLaunchMessage=false
