--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ nvim/.config/nvim/plugin/packer_compiled.lua
 dots/.config/lazygit/state.yml
 dots/.config/flameshot/flameshot.ini
 dots/.config/gtk-3.0/bookmarks
+dots/.config/tmux/plugins
