--- a/dots/.config/tmux/tmux.conf
+++ b/dots/.config/tmux/tmux.conf
@@ -11,8 +11,8 @@ unbind x
 bind x kill-pane
 
 # Better status line colors
-set -g status-bg black
-set -g status-fg white
+set -g status-left-length 25
+set -g status-right-length 300
 
 # Vim style pane selection
 bind h select-pane -L
@@ -35,6 +35,7 @@ bind -n M-Down select-pane -D
 # reorder windows with Cntrl-arrow
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
+
 
 # Plugins ----------------------------
 set -g @plugin 'tmux-plugins/tpm'
@@ -75,7 +76,37 @@ bind -n C-Down resize-pane -D 2
 bind -n C-Up resize-pane -U 2
 bind -n C-Right resize-pane -R 2
 
-bind-key -T prefix C-g split-window \
+#### COLOUR (Solarized dark)
+
+# default statusbar colors
+set-option -g status-style fg=green,bg=black #yellow and base02
+
+# default window title colors
+set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
+#set-window-option -g window-status-style dim
+
+# active window title colors
+set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
+
+# pane border
+set-option -g pane-border-style fg=black #base02
+set-option -g pane-active-border-style fg=brightgreen #base01
+
+# message text
+set-option -g message-style fg=brightred,bg=black #orange and base01
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# clock
+set-window-option -g clock-mode-colour blue #green
+
+# bell
+set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+
+bind-key -T prefix g split-window \
   "$SHELL --login -i -c 'navi --print | head -n 1 | tmux load-buffer -b tmp - ; tmux paste-buffer -p -t {last} -b tmp -d'"
 
 # Install plugin manager and plugins
