tmux kill session, install, git worktree

--- a/dots/.config/tmux/tmux.conf
+++ b/dots/.config/tmux/tmux.conf
@@ -1,4 +1,7 @@
 set -g default-terminal "screen-256color"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
 set -g mouse on
 
 set-option -sg escape-time 10
@@ -36,6 +39,8 @@ bind -n M-Down select-pane -D
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
+bind C-j display-popup -E -h 60% -w 85% "tms switch"
+bind C-w display-popup -E -h 60% -w 85% "tms windows"
 
 # Plugins ----------------------------
 set -g @plugin 'tmux-plugins/tpm'
@@ -48,17 +53,18 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'kitty,fullscreen'
-set -g status-right 'Continuum status: #{continuum_status}'
 
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
-set -g @catppuccin_flavour 'mocha'
+set -g status-right "#(tms sessions)"
 
-set -g @catppuccin_window_tabs_enabled on
-set -g @catppuccin_powerline_icons_theme_enabled on
-set -g @catppuccin_l_left_separator ""
-set -g @catppuccin_l_right_separator ""
-set -g @catppuccin_r_left_separator ""
-set -g @catppuccin_r_right_separator ""
+# set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+# set -g @catppuccin_flavour 'mocha'
+
+# set -g @catppuccin_window_tabs_enabled on
+# set -g @catppuccin_powerline_icons_theme_enabled on
+# set -g @catppuccin_l_left_separator ""
+# set -g @catppuccin_l_right_separator ""
+# set -g @catppuccin_r_left_separator ""
+# set -g @catppuccin_r_right_separator ""
 
 run '~/.tmux/plugins/tpm/tpm'
 
@@ -113,4 +119,5 @@ bind-key -T prefix g split-window \
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
-
+bind -r '(' switch-client -p\; refresh-client -S
+bind -r ')' switch-client -n\; refresh-client -S
